<resources>
    <string name="app_name">Poketme</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>


    <string name="introAcitivty_01">"소프트웨어 업데이트"</string>
    <string name="introAcitivty_02">"\n새로운 버젼이 나왔습니다. 계속 이용하려면 업데이트를 해야 합니다. "지금 스토어를 통해 업데이트를 하시기 바랍니다."</string>
    <string name="introAcitivty_03">"예"</string>
    <string name="introAcitivty_04">"아니오"</string>

    <string name="dialog_finish">"종료"</string>
    <string name="setNeutralButton">확인</string>


    <string name="permissionActivity_01">"Poket Me"</string>
    <string name="permissionActivity_02">"저장"</string>
    <string name="permissionActivity_03">"내 기기에서 사진, 동영상 및 파일을 포켓미로 전송,"</string>
    <string name="permissionActivity_04">"저정하기 위하여 접근 허용이 필요합니다."</string>
    <string name="permissionActivity_05">"주소록"</string>
    <string name="permissionActivity_06">"내 기기에 저장된 주소록의 친구와 사진공유를 하기"</string>
    <string name="permissionActivity_07">"위하여 포켓미로 전송하기위하여 주소록 접근 권한"</string>
    <string name="permissionActivity_08">"허용이 필요합니다."</string>
    <string name="permissionActivity_09">"허용하기"</string>
    <string name="permissionActivity_10">"'접근권한' 거부시 서비스 이용에 제한이 있습니다."</string>

    <string name="serviceActivity_01">"이용약관에 동의해 주세요."</string>
    <string name="serviceActivity_02">"[필수]서비스 이용약관 동의"</string>
    <string name="serviceActivity_03">"[필수]개인정보 수집 및 이용 동의"</string>
    <string name="serviceActivity_04">"모두 동의하고 계속 진행합니다"</string>
    <string name="serviceActivity_05">"기기변경 데이터를 저장하신 회원님이시라면 "</string>
    <string name="serviceActivity_06">"여기를"</string>
    <string name="serviceActivity_07">" 클릭해주세요"</string>

    <string name="loginActivity_01">"회원가입"</string>
    <string name="loginActivity_02">"아이디"</string>
    <string name="loginActivity_03">"패스워드"</string>
    <string name="loginActivity_04">"시작하기"</string>
    <string name="loginActivity_05">"아이디 / 패스워드찾기"</string>

    <string name="joinActivity_01">"로그인"</string>
    <string name="joinActivity_02">"내 사진 관리를 좀 더 쉽고 편리하게"</string>
    <string name="joinActivity_03">"그리고"</string>
    <string name="joinActivity_04">"친구들과 사진첩 공유를 위한 필수앱 포켓미!"</string>
    <string name="joinActivity_05">"간편한 회원가입"</string>
    <string name="joinActivity_06">"휴대폰번호"</string>
    <string name="joinActivity_07">"인증"</string>
    <string name="joinActivity_08">"인증번호"</string>
    <string name="joinActivity_09">"확인"</string>
    <string name="joinActivity_10">"아이디"</string>
    <string name="joinActivity_11">"닉네임"</string>
    <string name="joinActivity_12">"패스워드"</string>
    <string name="joinActivity_13">"패스워드 재입력"</string>

    <string name="findmyinfoActivity_01">"회원님의 아이디는 "</string>
    <string name="findmyinfoActivity_02">" 입니다."</string>
    <string name="findmyinfoActivity_03">"회원님의 임시 비밀번호는"</string>

    <string name="txt_bar_bottom01">"#TAG"</string>

    <string name="txt_finish_yes">"종료"</string>
    <string name="txt_default">"Default"</string>
    <string name="error_gif">x 나 y의 크기는 %1$dpx 이상, 파일 크기는 %2$sM 이하여야 합니다.</string>
</resources>

