<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center|left"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
    </LinearLayout>

       <LinearLayout
           android:orientation="vertical"
           android:gravity="center|left"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1">
               <TextView
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/permissionActivity_01"
                   android:textStyle="bold"
                   android:textSize="@dimen/text_vvb"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:layout_marginTop="20dp"
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/permissionActivity_02"
                   android:textSize="@dimen/text_bb"
                   android:textColor="@color/colorBlack"/>

               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/permissionActivity_03"
                   android:textSize="@dimen/text_b"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/permissionActivity_04"
                   android:textSize="@dimen/text_b"
                   android:textColor="@color/colorBlack"/>
       </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|left">
            <TextView
                android:layout_marginTop="15dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permissionActivity_05"
                android:textSize="@dimen/text_bb"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permissionActivity_06"
                android:textSize="@dimen/text_b"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permissionActivity_07"
                android:textSize="@dimen/text_b"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permissionActivity_08"
                android:textSize="@dimen/text_b"
                android:textColor="@color/colorBlack"/>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">
                <Button
                    android:id="@+id/bt_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/permissionActivity_09"/>
        </LinearLayout>

</LinearLayout>
