<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center|left"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
    </LinearLayout>

       <LinearLayout
           android:orientation="vertical"
           android:gravity="center|left"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
               <TextView
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/permissionActivity_01"
                   android:textStyle="bold"
                   android:textSize="@dimen/text_vvb"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:gravity="center"
                   android:layout_marginTop="20dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/serviceActivity_01"
                   android:textSize="@dimen/text_vbb"
                   android:textColor="@color/colorBlack"/>
       </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center|left">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <TextView
                    android:id="@+id/tv_agree01"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceActivity_02"
                    android:textSize="@dimen/text_bb"
                    android:textColor="@color/colorBlack"/>
                <CheckBox
                    android:id="@+id/cb_agree01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:id="@+id/tv_agree02"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/serviceActivity_03"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/text_bb" />
                <CheckBox
                    android:id="@+id/cb_agree02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
                <Button
                    android:id="@+id/bt_agree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceActivity_04"/>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceActivity_05"
                    android:textSize="@dimen/text_m"
                    android:textColor="@color/colorBlack"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceActivity_06"
                    android:textSize="@dimen/text_m"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serviceActivity_07"
                android:textSize="@dimen/text_m"
                android:textColor="@color/colorBlack"/>

        </LinearLayout>

</LinearLayout>
