<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary">
    <LinearLayout
        android:id="@+id/layout_login"
        android:orientation="horizontal"
        android:gravity="center|right"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
            <TextView
                android:layout_marginRight="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinActivity_01"
                android:textColor="@color/colorBlack"/>
    </LinearLayout>

       <LinearLayout
           android:orientation="vertical"
           android:gravity="center|left"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
               <TextView
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/permissionActivity_01"
                   android:textStyle="bold"
                   android:textSize="@dimen/text_vvb"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/joinActivity_02"
                   android:textSize="@dimen/text_b"
                   android:textColor="@color/colorBlack"/>
               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/joinActivity_03"
                   android:textSize="@dimen/text_b"
                   android:textColor="@color/colorBlack"/>

               <TextView
                   android:layout_marginTop="10dp"
                   android:layout_marginLeft="20dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/joinActivity_04"
                   android:textSize="@dimen/text_b"
                   android:textColor="@color/colorBlack"/>
       </LinearLayout>



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center|left">

            <TextView
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/joinActivity_05"
                android:textSize="@dimen/text_b"
                android:textColor="@color/colorBlack"/>

            <LinearLayout
                android:layout_marginTop="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/edit_phone_number"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionSearch"
                    android:inputType="number"
                    android:hint="@string/joinActivity_06"
                    android:lines="1"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#a3d1f3"
                    android:textSize="@dimen/text_m"
                    android:background="@drawable/edit_blank"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinActivity_07"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/edit_phone_confirm"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/joinActivity_08"
                    android:lines="1"
                    android:padding="10dp"
                    android:text=""
                    android:textColorHint="#a3d1f3"
                    android:textColor="@color/colorBlack"
                    android:password="true"
                    android:textSize="@dimen/text_m"
                    android:background="@drawable/edit_blank"/>
                <Button
                    android:id="@+id/bt_phone_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/joinActivity_09"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/edit_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/joinActivity_10"
                    android:lines="1"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#a3d1f3"
                    android:textSize="@dimen/text_m"
                    android:background="@drawable/edit_blank"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/joinActivity_11"
                    android:lines="1"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:textColorHint="#a3d1f3"
                    android:textSize="@dimen/text_m"
                    android:background="@drawable/edit_blank"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/joinActivity_12"
                    android:lines="1"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:password="true"
                    android:textColorHint="#a3d1f3"
                    android:textSize="@dimen/text_m"
                    android:background="@drawable/edit_blank"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <EditText
                    android:id="@+id/edit_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:hint="@string/joinActivity_13"
                    android:lines="1"
                    android:padding="10dp"
                    android:text=""
                    android:textColor="@color/colorBlack"
                    android:password="true"
                    android:textColorHint="#a3d1f3"
                    android:textSize="@dimen/text_m"
                    android:background="@drawable/edit_blank"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cb_agree01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_agree01"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceActivity_02"
                    android:textSize="@dimen/text_m"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <CheckBox
                    android:id="@+id/cb_agree02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tv_agree02"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/serviceActivity_03"
                    android:textSize="@dimen/text_m"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center|top"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="30dp">
                <Button
                    android:id="@+id/bt_join_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginActivity_04"/>
            <LinearLayout
                android:id="@+id/layout_find_info"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </LinearLayout>
        </LinearLayout>
</LinearLayout>
